working version of this new chaining form

--- a/examples/test2.config
+++ b/examples/test2.config
@@ -2,7 +2,7 @@
 (use 'gantry.core)
 (use 'gantry.run)
 
-{:resource 
+(create-config
  (-> (create-resource) 
   (add "newdy.huddler.com" :tags #{ :master }) 
-  (add "rudy.huddler.com"))}
+  (add "rudy.huddler.com")))
